# RuC-VM

./: .clang-format  .gitignore  .travis.yml  1  2  CMakeLists.txt  README.md  export.txt  tmp.sh
.github/workflows/: build.yml  deploy.yml  gitlab.yml
libs/: CMakeLists.txt  Defs.h  defs.h  import.h  threads.c  util.c  util.h
libs/interpreter/: CMakeLists.txt  defs.h  error.h  import.c  import.h  instuctions.h  syntax.h  threads.c  threads.h  tokens.h  utils.c  utils.h
libs/pthread/: CMakeLists.txt
scripts/: FTP.sh
src/: CMakeLists.txt  import.c  main.c  th_static.h  threads.c
